--- a/Files/CSS Files/navbar.css
+++ b/Files/CSS Files/navbar.css
@@ -79,7 +79,7 @@
         display: block;
         position: absolute;
         background-color: transparent;
-        background-image: url(../assets/menu.svg);
+        background-image: url('Files/Images/menu.svg');
         background-repeat: no-repeat;
         z-index: 9999;
         width: 2.5rem;
@@ -90,7 +90,7 @@
     }
 
     .mobile_nav_toggle[aria-expanded="true"] {
-        background-image: url(../assets/cross.png);
+        background-image: url('Files/Images/cross.png');
     }
 }
 
