--- a/Files/CSS Files/theme.style.css
+++ b/Files/CSS Files/theme.style.css
@@ -395,26 +395,116 @@ nav .mbr-section-btn {
   animation: gradient-animation 5s infinite alternate;
   -webkit-animation: gradient-animation 5s infinite alternate; }
 
-.menu .navbar-brand {
-  display: -webkit-flex; }
-  .menu .navbar-brand span {
-    display: flex;
-    display: -webkit-flex; }
-  .menu .navbar-brand .navbar-caption-wrap {
-    display: -webkit-flex; }
-  .menu .navbar-brand .navbar-logo img {
-    display: -webkit-flex; }
-@media (min-width: 768px) and (max-width: 991px) {
-  .menu .navbar-toggleable-sm .navbar-nav {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox; } }
-@media (min-width: 992px) {
-  .menu .navbar-nav.nav-dropdown {
-    display: -webkit-flex; }
-  .menu .navbar-toggleable-sm .navbar-collapse {
-    display: -webkit-flex !important; } }
 
+*{
+    margin: 0;
+    padding: 0;
+}
+
+.flex{
+    display: flex;
+    gap: var(--gap, 1rem);
+}
+
+/* primary heaader */
+.logo{
+    margin: 2.3rem;
+}
+
+.prime_head{
+    align-items: center;
+    justify-content: space-between;
+}
+
+.mobile_nav_toggle{
+    display: none;
+}
+
+.sr_only{
+    display:none;
+}
+
+.prim_navi{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+    background: hsla(0, 0%, 100%, 0.1);
+    backdrop-filter: blur(5rem);
+}
+
+@supports (backdrop-filter: (1rem)) {
+    .prim_navi{
+        background: hsl(0 0% 100% / 0.1);
+        backdrop-filter: blur(1rem);
+    }
+}
+
+.prim_navi a{
+    text-decoration: none;
+    color: white;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    font-weight: 500;
+}
+
+.prim_navi a > [aria-hidden="true"] {
+    font-weight: 700;
+    margin-inline-end: .75rem;
+}
+
+@media (max-width: 35em) {
+    .prim_navi{
+        --gap: 3em;
+
+        position: fixed;
+        z-index: 1000;
+        inset: 0 0 0 30%;
+
+        flex-direction: column;
+        padding: min(30dvh, 10rem) 2em;
+        backdrop-filter: blur(1rem);
+
+        transform: translateX(100%);
+        transition: transform 350ms ease-out;
+    }
+
+    .prim_navi[data-visible="true"] {
+        transform: translateX(0%);
+    }
+
+    .mobile_nav_toggle{
+        display: block;
+        position: absolute;
+        background-color: transparent;
+        background-image: url('Files/Images/menu.svg');
+        background-repeat: no-repeat;
+        z-index: 9999;
+        width: 2.5rem;
+        border: 0;
+        aspect-ratio: 1;
+        top: 2rem;
+        right: 2rem;
+    }
+
+    .mobile_nav_toggle[aria-expanded="true"] {
+        background-image: url('Files/Images/cross.png');
+    }
+}
+
+@media (min-width: 35em) and (max-width: 55em) {
+    .prim_navi a > span[aria-hidden] {
+        display: none;
+    }
+}
+
+@media (min-width: 35em) {
+    .prim_navi {
+        --gap: clamp(1.5rem, 5vw, 5rem);
+        padding-block: 2rem;
+        padding-inline: clamp(3rem, 8vw, 10rem);
+    }
+}
 /*# sourceMappingURL=style.css.map */
 .engine {
 	position: absolute;
