--- a/Files/CSS Files/additional.css
+++ b/Files/CSS Files/additional.css
@@ -6096,7 +6096,7 @@ body {
 .cid-qyXAPsqKdO {
   padding-top: 225px;
   padding-bottom: 150px;
-  background-image: url("Files/Images/AzBanner.png");
+  background-image: url('Files/Images/AzBanner.png');
 }
 .cid-qyXAPsqKdO .container-fluid {
   padding: 0 3rem;
