--- a/Files/CSS Files/navbar.css
+++ b/Files/CSS Files/navbar.css
@@ -31,20 +31,20 @@
     margin: 0;
     padding: 0;
 
-    background: hsla(0, 0%, 100%, 0.1);
-    backdrop-filter: blur(5rem);
+    background: cyan;
+    backdrop-filter: blur(25px);
 }
 
 @supports (backdrop-filter: (1rem)) {
     .prim_navi{
-        background: hsl(0 0% 100% / 0.1);
-        backdrop-filter: blur(1rem);
+        background: cyan;
+        backdrop-filter: blur(25px);
     }
 }
 
 .prim_navi a{
     text-decoration: none;
-    color: white;
+    color: black;
     font-size: 1.5rem;
     text-transform: uppercase;
     font-weight: 500;
@@ -65,7 +65,7 @@
 
         flex-direction: column;
         padding: min(30dvh, 10rem) 2em;
-        backdrop-filter: blur(1rem);
+        backdrop-filter: blur(25px);
 
         transform: translateX(100%);
         transition: transform 350ms ease-out;
