--- a/Files/CSS Files/theme.style.css
+++ b/Files/CSS Files/theme.style.css
@@ -395,7 +395,6 @@ nav .mbr-section-btn {
   animation: gradient-animation 5s infinite alternate;
   -webkit-animation: gradient-animation 5s infinite alternate; }
 
-
 *{
     margin: 0;
     padding: 0;
@@ -429,20 +428,20 @@ nav .mbr-section-btn {
     margin: 0;
     padding: 0;
 
-    background: hsla(0, 0%, 100%, 0.1);
-    backdrop-filter: blur(5rem);
+    background: cyan;
+    backdrop-filter: blur(25px);
 }
 
 @supports (backdrop-filter: (1rem)) {
     .prim_navi{
-        background: hsl(0 0% 100% / 0.1);
-        backdrop-filter: blur(1rem);
+        background: cyan;
+        backdrop-filter: blur(25px);
     }
 }
 
 .prim_navi a{
     text-decoration: none;
-    color: white;
+    color: black;
     font-size: 1.5rem;
     text-transform: uppercase;
     font-weight: 500;
@@ -463,7 +462,7 @@ nav .mbr-section-btn {
 
         flex-direction: column;
         padding: min(30dvh, 10rem) 2em;
-        backdrop-filter: blur(1rem);
+        backdrop-filter: blur(25px);
 
         transform: translateX(100%);
         transition: transform 350ms ease-out;
@@ -505,6 +504,7 @@ nav .mbr-section-btn {
         padding-inline: clamp(3rem, 8vw, 10rem);
     }
 }
+
 /*# sourceMappingURL=style.css.map */
 .engine {
 	position: absolute;
